--- a/LogisticAppProject/app/src/main/res/values/strings.xml
+++ b/LogisticAppProject/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">LogisticAppProject</string>
+    <string name="app_name">LogisticApp</string>
 </resources>
